--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -17,18 +17,21 @@
 
 
 <script src="../jquery.min.js"></script>
+<script src="../list.js"></script>
 <script src="qunit-2.0.1.js"></script>
 <script>
-    QUnit.test("冒烟测试", function (assert) {
-        assert.equal($('.has-error').is(':visible'), true);
-        $('.has-error').hide();
+    console.log('qunit test start')
+    QUnit.test("errors should be hidden on keypress", function (assert) {
+        console.log('in test 1')
+        initialize();
+        $('input[name="text"]').trigger('keypress');
         assert.equal($('.has-error').is(':visible'), false)
     });
-    QUnit.test("冒烟测试2", function (assert) {
-        assert.equal($('.has-error').is(':visible'), true);
-        $('.has-error').hide();
-        assert.equal($('.has-error').is(':visible'), false)
-    });
+    QUnit.test("errors are't hidden if threr is no keypress", function (assert) {
+        console.log('in test 2')
+        initialize();
+        assert.equal($('.has-error').is(':visible'), true)
+    })
 </script>
 </body>
 </html>
